--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "polylint": "^2.10.1",
-    "web-component-tester": "^4.3.4"
+    "wct-structured-data-testing": "^1.0.0",
+    "web-component-tester": "4.3.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/polylint simple-product.html",
