--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,6 @@
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-test-helpers": "^1.2.5"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
